# local_ai_runtime

./: .gitignore  .gitmodules  CMakeLists.txt  开发计划.md
.trae/documents/: 下一步工作需求清单与实施计划.md  多 Provider（llama.cpp 默认）接入方案.md  当前版本测试指南.md
docs/: How_to_use.md  MiniMemory_README.md  debug.md  provider.ts
src/: agent_server_provider.cpp  agent_server_provider.hpp  config.cpp  config.hpp  llama_cpp_provider.cpp  llama_cpp_provider.hpp  main.cpp  mcp_client.cpp  mcp_client.hpp  ollama_provider.cpp  ollama_provider.hpp  openai_compatible_http_provider.cpp  openai_compatible_http_provider.hpp  openai_router.cpp  openai_router.hpp  session_manager.cpp  session_manager.hpp  tooling.cpp  tooling.hpp
src/providers/: provider.hpp  registry.hpp
tests/: check_truncation.py  multiround_chat_stress.py
tools/: chat_client.py  mock_mcp_server.py  mock_openai_server.py  regression.py  smoke.sh
